Cria exception UserNotFoundException e adiciona no GlobalExceptionHandler
adiciona constante para chave dos maps de retorno, a pedido do SonarQube