@@ -1,7 +1,6 @@
 package com.vanvan.exception;
 import org.springframework.http.HttpStatus;
-import org.springframework.http.ResponseEntity;
-import org.springframework.validation.FieldError;
+import org.springframework.http.ResponseEntity; 
 import org.springframework.web.bind.MethodArgumentNotValidException;
 import org.springframework.web.bind.annotation.ExceptionHandler;
 import org.springframework.web.bind.annotation.RestControllerAdvice;
@@ -11,15 +10,17 @@ import java.util.Map;
 
 @RestControllerAdvice
 public class GlobalExceptionHandler {
+    
+    private static final String KEYMAP = "message";
 
     // 1. Trata os erros de anotação do DTO (@NotBlank, @Email, etc)
     @ExceptionHandler(MethodArgumentNotValidException.class)
     public ResponseEntity<Map<String, String>> handleValidationExceptions(MethodArgumentNotValidException ex) {
         // Pega o primeiro erro da lista para mostrar no Toast
-        String mensagemErro = ex.getBindingResult().getAllErrors().get(0).getDefaultMessage();
+        String mensagemErro = ex.getBindingResult().getAllErrors().getFirst().getDefaultMessage();
         
         Map<String, String> response = new HashMap<>();
-        response.put("message", mensagemErro); 
+        response.put(KEYMAP, mensagemErro); 
         
         return ResponseEntity.status(HttpStatus.BAD_REQUEST).body(response);
     }
@@ -27,35 +28,44 @@ public class GlobalExceptionHandler {
     @ExceptionHandler(CpfAlreadyExistsException.class)
     public ResponseEntity<Map<String, String>> handleCpfAlreadyExists(CpfAlreadyExistsException ex) {
         Map<String, String> response = new HashMap<>();
-        response.put("message", ex.getMessage()); // Vai retornar a mensagem que você definiu na exception
+        response.put(KEYMAP, ex.getMessage()); // Vai retornar a mensagem que você definiu na exception
         return ResponseEntity.status(HttpStatus.CONFLICT).body(response);
     }
 
     @ExceptionHandler(EmailAlreadyExistsException.class)
     public ResponseEntity<Map<String, String>> handleEmailAlreadyExists(EmailAlreadyExistsException ex) {
         Map<String, String> response = new HashMap<>();
-        response.put("message", ex.getMessage());
+        response.put(KEYMAP, ex.getMessage());
         return ResponseEntity.status(HttpStatus.CONFLICT).body(response);
     }
 
     @ExceptionHandler(CnhAlreadyExistsException.class)
     public ResponseEntity<Map<String, String>> handleCnhAlreadyExists(CnhAlreadyExistsException ex) {
         Map<String, String> response = new HashMap<>();
-        response.put("message", ex.getMessage());
+        response.put(KEYMAP, ex.getMessage());
         return ResponseEntity.status(HttpStatus.CONFLICT).body(response);
     }
 
    @ExceptionHandler(UnderageDriverException.class)
     public ResponseEntity<Map<String, String>> handleUnderageDriver(UnderageDriverException ex) {
         Map<String, String> response = new HashMap<>();
-        response.put("message", ex.getMessage());
+        response.put(KEYMAP, ex.getMessage());
         return ResponseEntity.status(HttpStatus.BAD_REQUEST).body(response);
     }
 
     @ExceptionHandler(UnderageUserException.class)
     public ResponseEntity<Map<String, String>> handleUnderageUser(UnderageUserException ex) {
         Map<String, String> response = new HashMap<>();
-        response.put("message", ex.getMessage());
+        response.put(KEYMAP, ex.getMessage());
         return ResponseEntity.status(HttpStatus.BAD_REQUEST).body(response);
+    }
+
+    @ExceptionHandler(UserNotFoundException.class)
+    public ResponseEntity<Map<String, String>> handleUserNotFound(UserNotFoundException ex) {
+
+        Map<String, String> response = new HashMap<>();
+        response.put(KEYMAP, ex.getMessage());
+
+        return ResponseEntity.status(HttpStatus.NOT_FOUND).body(response);
     }
 }
